Fix some glossary entries

--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -4,7 +4,7 @@
     description={An Application Programming Interface (API) is a particular set
     of rules and specifications that a software program can follow to access and
     make use of the services and resources provided by another particular software
-    program that implements that API
+    program that implements that API.
 }}
 %%% define the acronym and use the see= option
 \newglossaryentry{api}{type=\acronymtype, name={API}, 
@@ -13,14 +13,14 @@ first={Application Programming Interface (API)\glsadd{apig}}, see=[Glossary:]{ap
 
 %%% 2S
 \newglossaryentry{2sg}{name={2S},
-    description={A battery pack using 2 batteries in series (2S)}}
+    description={A battery pack using 2 batteries in series (2S).}}
 \newglossaryentry{2s}{type=\acronymtype, name={2S}, 
 description={Two cells in Series}, 
 first={Two cells in series (2S)\glsadd{2sg}}, see=[Glossary:]{2sg}}
 
 %%% TOF
 \newglossaryentry{tofg}{name={ToF},
-    description={Time of Flight (TOF) is a property of an object, particle, electromagnetic or other wave. It is the time that such an object needs to travel a distance through a medium. The measurement of this time (i.e. the time of flight) can be used for a time standard as a way to measure velocity or path length through a given medium}}
+    description={Time of Flight (TOF) is a property of an object, particle, electromagnetic or other wave. It is the time that such an object needs to travel a distance through a medium. The measurement of this time (i.e. the time of flight) can be used for a time standard as a way to measure velocity or path length through a given medium.}}
 \newglossaryentry{tof}{type=\acronymtype, name={ToF}, 
 description={Time of Flight}, 
 first={Time of Flight (TOF)\glsadd{tofg}}, see=[Glossary:]{tofg}}
@@ -36,14 +36,14 @@ first={boat commander (skipper)\glsadd{skipperg}}, see=[Glossary:]{skipperg}}
 %%% ti
 \newglossaryentry{tig}{name={TI},
     description={Texas Instruments Inc. (TI) is an American technology company
-	that designs and manufactures semiconductors and various integrated circuits }}
+	that designs and manufactures semiconductors and various integrated circuits. }}
 \newglossaryentry{ti}{type=\acronymtype, name={TI}, 
 description={Texas Instruments Inc.}, 
 first={Texas Instruments Inc. (TI)\glsadd{tig}}, see=[Glossary:]{tig}}
 
 %%% IC
 \newglossaryentry{icg}{name={IC},
-    description={Integrated Circuit (IC) is a set of electronic circuits on one small flat chip}}
+    description={Integrated Circuit (IC) is a set of electronic circuits on one small flat chip.}}
 \newglossaryentry{ic}{type=\acronymtype, name={IC}, 
 description={Integrated Circuit}, 
 first={Integrated Circuit (IC)\glsadd{icg}}, see=[Glossary:]{icg}}
@@ -51,7 +51,7 @@ first={Integrated Circuit (IC)\glsadd{icg}}, see=[Glossary:]{icg}}
 %%% PC
 \newglossaryentry{pcg}{name={PC},
     description={Personal Computer (PC)  is a multi-purpose computer whose size,
-	capabilities, and price make it feasible for individual use}}
+	capabilities, and price make it feasible for individual use.}}
 \newglossaryentry{pc}{type=\acronymtype, name={NAME}, 
 description={Personal Computer}, 
 first={Personal Computer (PC)\glsadd{pcg}}, see=[Glossary:]{pcg}}
@@ -59,7 +59,7 @@ first={Personal Computer (PC)\glsadd{pcg}}, see=[Glossary:]{pcg}}
 %%% IMU
 \newglossaryentry{imug}{name={IMU},
     description={Inertial Measurement Units (IMUs) are integrated circuits that
-    can measure acceleration, rotational velocity and magnetic field strength}}
+    can measure acceleration, rotational velocity and magnetic field strength.}}
 \newglossaryentry{imu}{type=\acronymtype, name={IMU}, 
 description={Inertial Measurement Unit}, 
 first={Inertial Measurement Unit (IMU)\glsadd{imug}}, see=[Glossary:]{imug}}
@@ -68,7 +68,7 @@ first={Inertial Measurement Unit (IMU)\glsadd{imug}}, see=[Glossary:]{imug}}
 \newglossaryentry{gpsg}{name={GPS},
     description={The Global Positioning System (GPS) is a radionavigation
     system owned by the United States government and operated by the 
-    United States Air Force. It uses sattelites for geolocation and time}}
+    United States Air Force. It uses sattelites for geolocation and time.}}
 \newglossaryentry{gps}{type=\acronymtype, name={GPS}, 
 description={Global Positioning System}, 
 first={Global Positioning System (GPS)\glsadd{gpsg}}, see=[Glossary:]{gpsg}}
@@ -76,7 +76,7 @@ first={Global Positioning System (GPS)\glsadd{gpsg}}, see=[Glossary:]{gpsg}}
 %%% CAD
 \newglossaryentry{cadg}{name={CAD},
     description={Computer-aided design (CAD) is a computer system which aids
-    the creation and modification of some kind of design}}
+    the creation and modification of some kind of design.}}
 \newglossaryentry{cad}{type=\acronymtype, name={CAD}, 
 description={Computer-aided design}, 
 first={Computer-aided design (CAD)\glsadd{cadg}}, see=[Glossary:]{cadg}}
@@ -84,7 +84,7 @@ first={Computer-aided design (CAD)\glsadd{cadg}}, see=[Glossary:]{cadg}}
 %%% MCU
 \newglossaryentry{mcug}{name={MCU},
     description={A Microcontroller Unit (MCU) is a single computer chip 
-    designed for embedded applications}}
+    designed for embedded applications.}}
 \newglossaryentry{mcu}{type=\acronymtype, name={MCU}, 
 description={Microcontroller Unit}, 
 first={Microcontroller Unit (MCU)\glsadd{mcug}}, see=[Glossary:]{mcug}}
@@ -107,7 +107,7 @@ first={Printed Wire Board (PWB)\glsadd{pwbg}}, see=[Glossary:]{pwbg}}
 
 %%% SEK
 \newglossaryentry{sekg}{name={SEK},
-    description={Swedish Krona (SEK) is the currency in Sweden}}
+    description={Swedish Krona (SEK) is the currency in Sweden.}}
 \newglossaryentry{sek}{type=\acronymtype, name={SEK}, 
 description={Swedish Krona}, 
 first={Swedish Krona (SEK)\glsadd{sekg}}, see=[Glossary:]{sekg}}
@@ -115,14 +115,14 @@ first={Swedish Krona (SEK)\glsadd{sekg}}, see=[Glossary:]{sekg}}
 %%% SWD
 \newglossaryentry{swdg}{name={SWD},
     description={Serial Wire Debug (SWD) is an alternative 2-pin electrical interface,
-	standard debugging protocol used in ARM processors}}
+	standard debugging protocol used in ARM processors.}}
 \newglossaryentry{swd}{type=\acronymtype, name={SWD},
 description={Serial Wire Debug}, 
 first={Serial Wire Debug (SWD)\glsadd{swdg}}, see=[Glossary:]{swdg}}
 
 %%% LIDAR
 \newglossaryentry{lidarg}{name={LIDAR},
-    description={Light Detection and Ranging (LIDAR)}}
+    description={Light Detection and Ranging (LIDAR).}}
 \newglossaryentry{lidar}{type=\acronymtype, name={LIDAR}, 
 description={Light Detection and Ranging}, 
 first={Light Detection and Ranging (LIDAR)\glsadd{lidarg}}, see=[Glossary:]{lidarg}}
@@ -130,7 +130,7 @@ first={Light Detection and Ranging (LIDAR)\glsadd{lidarg}}, see=[Glossary:]{lida
 %%% IR
 \newglossaryentry{irg}{name={IR},
     description={Infrared radiation (IR) is electromagnetic radiation (EMR) 
-    with longer wavelengths than those of visible light}}
+    with longer wavelengths than those of visible light.}}
 \newglossaryentry{ir}{type=\acronymtype, name={IR}, 
 description={Infrared radiation}, 
 first={Infrared radiation (IR)\glsadd{irg}}, see=[Glossary:]{irg}}
@@ -138,21 +138,21 @@ first={Infrared radiation (IR)\glsadd{irg}}, see=[Glossary:]{irg}}
 %%% ARM
 \newglossaryentry{armg}{name={ARM},
     description={The ARM architecture (ARM) is a family of reduced instruction
-    set computing (RISC) architectures for computer processors}}
+    set computing (RISC) architectures for computer processors.}}
 \newglossaryentry{arm}{type=\acronymtype, name={ARM}, 
 description={ARM architecture}, 
 first={ARM architecture (ARM)\glsadd{armg}}, see=[Glossary:]{armg}}
 
 %%% BMS
 \newglossaryentry{bmsg}{name={BMS},
-    description={Battery Management System (BMS) is the circuitry charging the battery}}
+    description={Battery Management System (BMS) is the circuitry charging the battery.}}
 \newglossaryentry{bms}{type=\acronymtype, name={BMS}, 
 description={Battery Management System}, 
 first={Battery Management System (BMS)\glsadd{bmsg}}, see=[Glossary:]{bmsg}}
 
 %%% LI-ION
 \newglossaryentry{liong}{name={LIB},
-    description={Lithium-ion Battery (LIB) is a common type of rechargeable battery}}
+    description={Lithium-ion Battery (LIB) is a common type of rechargeable battery.}}
 \newglossaryentry{lion}{type=\acronymtype, name={LIB}, 
 description={Battery Management System}, 
 first={Lithium-ion Batteries (LIB)\glsadd{liong}}, see=[Glossary:]{liong}}
@@ -160,7 +160,7 @@ first={Lithium-ion Batteries (LIB)\glsadd{liong}}, see=[Glossary:]{liong}}
 %%% PTC 
 \newglossaryentry{ptcg}{name={PTC},
 	description={Positive Temperature Coefficient (PTC) describes the
-	relative change of a physical property that is associated with a given change in temperature}}
+	relative change of a physical property that is associated with a given change in temperature.}}
 \newglossaryentry{ptc}{type=\acronymtype, name={PTC},
 description={Positive Temperature Coefficient},
 first={Positive Temperature Coefficient (PTC)\glsadd{ptcg}}, see=[Glossary:]{ptcg}}
@@ -169,14 +169,14 @@ first={Positive Temperature Coefficient (PTC)\glsadd{ptcg}}, see=[Glossary:]{ptc
 \newglossaryentry{sohg}{name={SoH},
 	description={State of health (SoH) is a figure of merit of the condition of a
 	battery, compared to its ideal conditions. The units of SoH are percent points
-	($100\%$ = the battery's conditions match the battery's specifications)}}
+	($100\%$ = the battery's conditions match the battery's specifications).}}
 \newglossaryentry{soh}{type=\acronymtype, name={SoH},
 description={State of health},
 first={State of health (SoH)\glsadd{sohg}}, see=[Glossary:]{sohg}}
 
 %%% CID
 \newglossaryentry{cidg}{name={CID},
-	description={Current Interrupt Device (CID) ???????????????}}
+	description={A Current Interrupt Device (CID) is a type of protection circuit for lithium-ion batteries.}}
 \newglossaryentry{cid}{type=\acronymtype, name={CID},
 description={Current Interrupt Device},
 first={Current Interrupt Device (CID)\glsadd{cidg}}, see=[Glossary:]{cidg}}
@@ -184,7 +184,7 @@ first={Current Interrupt Device (CID)\glsadd{cidg}}, see=[Glossary:]{cidg}}
 %%% ST
 \newglossaryentry{stg}{name={ST},
     description={STMicroelectronics (ST) is a French-Italian multinational 
-    electronics and semiconductor manufacturer}}
+    electronics and semiconductor manufacturer.}}
 \newglossaryentry{st}{type=\acronymtype, name={ST}, 
 description={STMicroelectronics}, 
 first={STMicroelectronics (ST)\glsadd{stg}}, see=[Glossary:]{stg}}
@@ -192,7 +192,7 @@ first={STMicroelectronics (ST)\glsadd{stg}}, see=[Glossary:]{stg}}
 %%% DRC
 \newglossaryentry{drcg}{name={DRC},
     description={Design Rule Check (DRC) is an automated check of your designed \gls{pcb}
-	to see if it follows all specified design rules}}
+	to see if it follows all specified design rules.}}
 \newglossaryentry{drc}{type=\acronymtype, name={DRC}, 
 description={Design Rule Check}, 
 first={Design Rule Check (DRC)\glsadd{drcg}}, see=[Glossary:]{drcg}}
@@ -200,7 +200,7 @@ first={Design Rule Check (DRC)\glsadd{drcg}}, see=[Glossary:]{drcg}}
 %%% ERC
 \newglossaryentry{ercg}{name={ERC},
     description={Electronic Rule Check (ERC) is an automated check of your designed schematic
-	to see if it follows all electronic rules}}
+	to see if it follows all electronic rules.}}
 \newglossaryentry{erc}{type=\acronymtype, name={ERC}, 
 description={Electronic Rule Check}, 
 first={Electronic Rule Check (ERC)\glsadd{ercg}}, see=[Glossary:]{ercg}}
@@ -210,7 +210,7 @@ first={Electronic Rule Check (ERC)\glsadd{ercg}}, see=[Glossary:]{ercg}}
     description={Universal Asynchronous Receiver-Transmitter (UART) is a 
     computer hardware device for asynchronous serial communication 
 	in which the data format and transmission speeds are configurable. It generally requires
-	less power and is slower than its counterpart USART}}
+	less power and is slower than its counterpart USART.}}
 \newglossaryentry{uart}{type=\acronymtype, name={UART}, 
 description={Universal Asynchronous Receiver-Transmitter}, 
 first={Universal Asynchronous Receiver-Transmitter (UART)\glsadd{uartg}}, see=[Glossary:]{uartg}}
@@ -218,7 +218,7 @@ first={Universal Asynchronous Receiver-Transmitter (UART)\glsadd{uartg}}, see=[G
 %%% USART
 \newglossaryentry{usartg}{name={USART},
     description={Universal Synchronous Asynchronous Receiver-Transmitter (USART) is a 
-    computer hardware device for synchronous asynchronous serial communication}}
+    computer hardware device for synchronous asynchronous serial communication}.}
 \newglossaryentry{usart}{type=\acronymtype, name={USART}, 
 description={Universal Synchronous Asynchronous Receiver-Transmitter}, 
 first={Universal Synchronous Asynchronous Receiver-Transmitter (USART)\glsadd{usartg}}, see=[Glossary:]{usartg}}
@@ -227,7 +227,7 @@ first={Universal Synchronous Asynchronous Receiver-Transmitter (USART)\glsadd{us
 \newglossaryentry{usbg}{name={USB},
     description={Universal Serial Bus (USB), is an industry standard for
     cables, connectors and communications protocols for connection, 
-    communication, and power supply between computers and devices}}
+    communication, and power supply between computers and devices.}}
 \newglossaryentry{usb}{type=\acronymtype, name={USB}, 
 description={Universal Serial Bus}, 
 first={Universal Serial Bus (USB)\glsadd{usbg}}, see=[Glossary:]{usbg}}
@@ -235,21 +235,21 @@ first={Universal Serial Bus (USB)\glsadd{usbg}}, see=[Glossary:]{usbg}}
 %%% Bluetooth
 \newglossaryentry{btg}{name={BT},
     description={Bluetooth (BT), is a wireless short-range half-duplex 
-	communication standard used mostly in mobile devices}}
+	communication standard used mostly in mobile devices.}}
 \newglossaryentry{bt}{type=\acronymtype, name={BT}, 
 description={Bluetooth}, 
 first={Bluetooth (BT)\glsadd{btg}}, see=[Glossary:]{btg}}
 
 %%% LED
 \newglossaryentry{ledg}{name={LED},
-    description={A Light-emitting diode (LED), is a two-lead semiconductor light source}}
+    description={A Light-emitting diode (LED), is a two-lead semiconductor light source.}}
 \newglossaryentry{led}{type=\acronymtype, name={LED}, 
 description={Light-emitting diode}, 
 first={Light-emitting diode (LED)\glsadd{ledg}}, see=[Glossary:]{ledg}}
 
 %%% GPIO
 \newglossaryentry{gpiog}{name={GPIO},
-    description={General Purpose Input Output (GPIO), is a general use port of an \gls{mcu}}}
+    description={General Purpose Input Output (GPIO), is a general use port of an \gls{mcu}.}}
 \newglossaryentry{gpio}{type=\acronymtype, name={GPIO}, 
 description={General Purpose Input Output}, 
 first={General Purpose Input Output (GPIO)\glsadd{gpiog}}, see=[Glossary:]{gpiog}}
@@ -258,7 +258,7 @@ first={General Purpose Input Output (GPIO)\glsadd{gpiog}}, see=[Glossary:]{gpiog
 \newglossaryentry{spig}{name={SPI},
     description={Serial Peripheral Interface Bus (SPI), is a synchronous 
     serial communication interface specification used for short distance 
-    communication, primarily in embedded systems}}
+    communication, primarily in embedded systems.}}
 \newglossaryentry{spi}{type=\acronymtype, name={SPI}, 
 description={Serial Peripheral Interface}, 
 first={Serial Peripheral Interface (SPI)\glsadd{spig}}, see=[Glossary:]{spig}}
@@ -266,14 +266,14 @@ first={Serial Peripheral Interface (SPI)\glsadd{spig}}, see=[Glossary:]{spig}}
 %%% MEMS
 \newglossaryentry{memsg}{name={MEMS},
     description={Microelectromechanical systems (MEMS), is the technology
-    of microscopic devices}}
+    of microscopic devices.}}
 \newglossaryentry{mems}{type=\acronymtype, name={MEMS}, 
 description={Microelectromechanical systems}, 
 first={Microelectromechanical systems (MEMS)\glsadd{memsg}}, see=[Glossary:]{memsg}}
 
 %%% I2C
 \newglossaryentry{i2cg}{name={I$^2$C},
-    description={Inter-Integrated Circuit (I$^2$C), is a serial computer bus}}
+    description={Inter-Integrated Circuit (I$^2$C), is a serial computer bus.}}
 \newglossaryentry{i2c}{type=\acronymtype, name={I$^2$C}, 
 description={Inter-Integrated Circuit}, 
 first={Inter-Integrated Circuit (I$^2$C)\glsadd{i2cg}}, see=[Glossary:]{i2cg}}
@@ -281,7 +281,7 @@ first={Inter-Integrated Circuit (I$^2$C)\glsadd{i2cg}}, see=[Glossary:]{i2cg}}
 %%% DMA
 \newglossaryentry{dmag}{name={DMA},
     description={Direct Memory Access (DMA) is a feature which allows hardware 
-    subsystems to access main system memory independent of the central processing unit (CPU)}}
+    subsystems to access main system memory independent of the central processing unit (CPU).}}
 \newglossaryentry{dma}{type=\acronymtype, name={DMA}, 
 description={Direct Memory Access}, 
 first={Direct Memory Access (DMA)\glsadd{dmag}}, see=[Glossary:]{dmag}}
@@ -289,14 +289,14 @@ first={Direct Memory Access (DMA)\glsadd{dmag}}, see=[Glossary:]{dmag}}
 %%% AHRS
 \newglossaryentry{ahrsg}{name={AHRS},
     description={An Attitude and Heading Reference System (AHRS) consists 
-    three axes sensors which provide attitude information, including roll, pitch and yaw}}
+    three axes sensors which provide attitude information, including roll, pitch and yaw.}}
 \newglossaryentry{ahrs}{type=\acronymtype, name={AHRS}, 
 description={Attitude and Heading Reference System}, 
 first={Attitude and Heading Reference System (AHRS)\glsadd{ahrsg}}, see=[Glossary:]{ahrsg}}
 
 %%% MATLAB
 \newglossaryentry{matlabg}{name={MATLAB},
-    description={MATLAB (matrix laboratory) is a numerical computing environment}}
+    description={MATLAB (matrix laboratory) is a numerical computing environment.}}
 \newglossaryentry{matlab}{type=\acronymtype, name={MATLAB}, 
 description={Matrix Laboratory}, 
 first={Matrix Laboratory (MATLAB)\glsadd{matlabg}}, see=[Glossary:]{matlabg}}
@@ -305,7 +305,7 @@ first={Matrix Laboratory (MATLAB)\glsadd{matlabg}}, see=[Glossary:]{matlabg}}
 \newglossaryentry{socg}{name={SoC},
     description={State of Charge (SoC) is normally used when discussing the current state
 	of a battery in use, working as kind of a fuel gauge but for battery packs. The units
-	of SoC are percentage points ($0\%$ = empty; $100\%$ = full)}}
+	of SoC are percentage points ($0\%$ = empty; $100\%$ = full).}}
 \newglossaryentry{soc}{type=\acronymtype, name={SoC}, 
 description={State of Charge}, 
 first={State of Charge (SoC)\glsadd{socg}}, see=[Glossary:]{socg}}
@@ -314,7 +314,7 @@ first={State of Charge (SoC)\glsadd{socg}}, see=[Glossary:]{socg}}
 \newglossaryentry{cccvg}{name={CCCV},
     description={Constant Current, Constant Voltage (CCCV) is a combination of constant
 	voltage and constant current charging, limiting the amount of current to a pre-set
-	level until the battery reaches a pre-set voltage level\cite{cccv}}}
+	level until the battery reaches a pre-set voltage level\cite{cccv}.}}
 \newglossaryentry{cccv}{type=\acronymtype, name={CCCV}, 
 description={Constant Current, Constant Voltage}, 
 first={Constant Current, Constant Voltage (CCCV)\glsadd{cccvg}}, see=[Glossary:]{cccvg}}
@@ -322,7 +322,7 @@ first={Constant Current, Constant Voltage (CCCV)\glsadd{cccvg}}, see=[Glossary:]
 %%% ADC
 \newglossaryentry{adcg}{name={ADC},
     description={An Analog-to-digital converter (ADC) is a system that converts 
-    an analog signal into a digital signal}}
+    an analog signal into a digital signal.}}
 \newglossaryentry{adc}{type=\acronymtype, name={ADC}, 
 description={Analog-to-digital converter}, 
 first={Analog-to-digital converter (ADC)\glsadd{adcg}}, see=[Glossary:]{adcg}}
@@ -330,14 +330,14 @@ first={Analog-to-digital converter (ADC)\glsadd{adcg}}, see=[Glossary:]{adcg}}
 %%% NMEA
 \newglossaryentry{nmeag}{name={NMEA},
     description={The National Marine Electronics Association (NMEA) standard is a
-    specification that defines the interface between various pieces of marine electronic equipment}}
+    specification that defines the interface between various pieces of marine electronic equipment.}}
 \newglossaryentry{nmea}{type=\acronymtype, name={NMEA}, 
 description={National Marine Electronics Association standard}, 
 first={National Marine Electronics Association standard (NMEA)\glsadd{nmeag}}, see=[Glossary:]{nmeag}}
 
 %%% UML
 \newglossaryentry{umlg}{name={UML},
-    description={The Unified Modeling Language (UML) is a general-purpose, developmental, modeling language}}
+    description={The Unified Modeling Language (UML) is a general-purpose, developmental, modeling language.}}
 \newglossaryentry{uml}{type=\acronymtype, name={UML}, 
 description={Unified Modeling Language}, 
 first={Unified Modeling Language (UML)\glsadd{umlg}}, see=[Glossary:]{umlg}}
@@ -352,49 +352,49 @@ first={via\glsadd{viag}}, see=[Glossary:]{viag}}
 
 %%% PNG
 \newglossaryentry{pngg}{name={PNG},
-    description={Portable Network Graphics (PNG) is a raster graphics file format}}
+    description={Portable Network Graphics (PNG) is a raster graphics file format.}}
 \newglossaryentry{png}{type=\acronymtype, name={PNG}, 
 description={Portable Network Graphics}, 
 first={Portable Network Graphics (PNG)\glsadd{pngg}}, see=[Glossary:]{pngg}}
 
 %%% MAC
 \newglossaryentry{macg}{name={MAC},
-    description={Media access control address (MAC) is a unique identifier assigned to network interfaces}}
+    description={Media access control address (MAC) is a unique identifier assigned to network interfaces.}}
 \newglossaryentry{mac}{type=\acronymtype, name={MAC}, 
 description={Media access control address}, 
 first={Media access control address (MAC)\glsadd{macg}}, see=[Glossary:]{macg}}
 
 %%% INS
 \newglossaryentry{insg}{name={INS},
-    description={Inertial Navigation System (INS)}}
+    description={Inertial Navigation System (INS) are navigation aids that use a accelerometers, gyroscopes and magnetic sensors to calculate position, orientation and velocity.}}
 \newglossaryentry{ins}{type=\acronymtype, name={INS}, 
 description={Inertial Navigation System}, 
 first={Inertial Navigation System (INS)\glsadd{insg}}, see=[Glossary:]{insg}}
 
 %%% SINS
 \newglossaryentry{sinsg}{name={SINS},
-    description={Strapdown Inertial Navigation System (SINS)}}
+    description={Strapdown Inertial Navigation System (SINS) are lightweight, low cost, digital navigation systems.}}
 \newglossaryentry{sins}{type=\acronymtype, name={SINS}, 
 description={Strapdown Inertial Navigation System}, 
 first={Strapdown Inertial Navigation System (SINS)\glsadd{sinsg}}, see=[Glossary:]{sinsg}}
 
 %%% DCM
 \newglossaryentry{dcmg}{name={DCM},
-    description={Direction Cosine Matrix (DCM)}}
+    description={Direction Cosine Matrix (DCM) is a matrix that transforms one coordinate reference frame to another.}}
 \newglossaryentry{dcm}{type=\acronymtype, name={DCM}, 
 description={Direction Cosine Matrix}, 
 first={Direction Cosine Matrix (DCM)\glsadd{dcmg}}, see=[Glossary:]{dcmg}}
 
 %%% LGA
 \newglossaryentry{lgag}{name={LGA},
-    description={Land Grid Array (LGA)}}
+    description={Land Grid Array (LGA) is a type of \gls{smd} device with pins on the socket.}}
 \newglossaryentry{lga}{type=\acronymtype, name={LGA}, 
 description={Land Grid Array}, 
 first={Land Grid Array (LGA)\glsadd{lgag}}, see=[Glossary:]{lgag}}
 
 %%% SMD
 \newglossaryentry{smdg}{name={SMD},
-    description={Surface Mount Device (SMD)}}
-\newglossaryentry{smd}{type=\acronymtype, name={smd}, 
+    description={Surface Mount Devices (SMD) are electric components soldered directly on a \gls{pcb} instead of using through-holes.}}
+\newglossaryentry{smd}{type=\acronymtype, name={SMD}, 
 description={Surface Mount Device}, 
 first={Surface Mount Device (SMD)\glsadd{smdg}}, see=[Glossary:]{smdg}}
