--- a/report/main.tex
+++ b/report/main.tex
@@ -22,7 +22,7 @@
 % links
 \usepackage{color}
 %\usepackage[linktocpage=true, colorlinks=true, allcolors=blue]{hyperref}
-\usepackage[pdfpagemode={UseOutlines},bookmarks=true,bookmarksopenlevel=0,bookmarksnumbered=true,plainpages=false,colorlinks,linkcolor={black},citecolor={blue},urlcolor={red},pdfstartview={FitV},unicode,breaklinks=true,pdfpagelabels]{hyperref}
+\usepackage[pdfpagemode={UseOutlines},bookmarks=true,bookmarksopenlevel=0,bookmarksnumbered=true,plainpages=false,colorlinks,linkcolor={black},citecolor={blue},urlcolor={blue},pdfstartview={FitV},unicode,breaklinks=true,pdfpagelabels]{hyperref}
 \usepackage[all]{hypcap}
 \usepackage[hypcap]{caption}
 
