Updating captions and compressing some figures

--- a/report/hw_design.tex
+++ b/report/hw_design.tex
@@ -73,7 +73,7 @@ First revision included the main functionality and test points on basically ever
 \begin{figure}[H]
 	\centering
     \includegraphics[width=.8\linewidth]{Figures/pcb_rev1.jpg}
-	\caption{First (1) revision circuit board.}
+	\captionsource{First (1) revision circuit board.}{Author}
 	\label{fig:pcbr1}
 \end{figure}
 
@@ -82,7 +82,7 @@ The second revision fixed all known problems, followed the space requirements an
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=.8\linewidth]{Figures/pcb_rev2.jpg}
-	\caption{Second (2) revision circuit board.}
+	\captionsource{Second (2) revision circuit board.}{Author}
 	\label{fig:pcbr2}
 \end{figure}
 
@@ -117,13 +117,13 @@ The third, and last, revision of the \gls{pcb} can be seen in \autoref{fig:pcbr3
 \begin{figure}[H]
 	\centering
     \includegraphics[width=.8\linewidth]{Figures/pcb_rev3.jpg}
-	\caption{Third (3) revision circuit board.}
+	\captionsource{Third (3) revision circuit board.}{Author}
 	\label{fig:pcbr3}
 \end{figure}
 \begin{figure}[H]
 	\centering
     \includegraphics[width=.6\linewidth]{Figures/pcb_rev3_simple.png}
-	\caption{Simple model of third (3) revision circuit board areas.}
+	\captionsource{Simple model of third (3) revision circuit board areas.}{Author}
 	\label{fig:pcbr3simple}
 \end{figure}
 
