--- a/report/APPENDIX.tex
+++ b/report/APPENDIX.tex
@@ -4,20 +4,20 @@
 %Image of schematic(s) (Rev 3)
 \begin{figure}[h]
 	\centering
-    \includegraphics[width=.93\linewidth]{Figures/schem_r3_a.png}
-	\caption{Schematic of revision 3, part a: Required circuitry.}
+    \includegraphics[width=.91\linewidth]{Figures/schem_r3_a.png}
+	\captionsource{Schematic of revision 3, part a: Required circuitry.}{Author}
 	\label{fig:schr3a}
 \end{figure}
 \begin{figure}[h]
 	\centering
     \includegraphics[width=\linewidth]{Figures/schem_r3_b.png}
-	\caption{Schematic of revision 3, part b: Modules.}
+	\captionsource{Schematic of revision 3, part b: Modules.}{Author}
 	\label{fig:schr3b}
 \end{figure}
 \begin{figure}[h]
 	\centering
     \includegraphics[width=\linewidth]{Figures/schem_r3_c.png}
-	\caption{Schematic of revision 3, part c: Meta circuitry.}
+	\captionsource{Schematic of revision 3, part c: Meta circuitry.}{Author}
 	\label{fig:schr3c}
 \end{figure}
 
@@ -26,25 +26,25 @@
 \begin{figure}[h]
 	\centering
     \includegraphics[width=.9\linewidth]{Figures/gasgauge_sch_root.png}
-	\caption{Root schematic of \gls{bms} circuitry.}
+	\captionsource{Root schematic of \gls{bms} circuitry.}{Author}
 	\label{fig:schbmsr}
 \end{figure}
 \begin{figure}[h]
 	\centering
     \includegraphics[width=.9\linewidth]{Figures/gasgauge_sch_bq28z610.png}
-	\caption{Schematic of \gls{bms}, part a: bq28z610.}
+	\captionsource{Schematic of \gls{bms}, part a: bq28z610.}{Author}
 	\label{fig:schbmsr}
 \end{figure}
 \begin{figure}[h]
 	\centering
     \includegraphics[width=\linewidth]{Figures/gasgauge_sch_bq24133.png}
-	\caption{Schematic of \gls{bms}, part b: bq24133.}
+	\captionsource{Schematic of \gls{bms}, part b: bq24133.}{Author}
 	\label{fig:schbmsr}
 \end{figure}
 \begin{figure}[h]
 	\centering
     \includegraphics[width=\linewidth]{Figures/gasgauge_sch_lm2529.png}
-	\caption{Schematic of \gls{bms}, part c: lm2596.}
+	\captionsource{Schematic of \gls{bms}, part c: lm2596.}{Author}
 	\label{fig:schbmsr}
 \end{figure}
 
@@ -55,7 +55,7 @@
 \begin{figure}[tbh]
 	\centering
     	\includegraphics[width=\linewidth]{Figures/MXCube.png}
-	\caption{CubeMX software}
+	\captionsource{CubeMX software}{Author}
 	\label{fig:mxc}
 \end{figure}
 
@@ -65,7 +65,7 @@
 \begin{figure}[htb]
 	\centering
     \includegraphics[width=\linewidth]{Figures/casing_dimensions.png}
-	\caption{System enclosure shape and dimensions}
+	\captionsource{System enclosure shape and dimensions}{Author}
 	\label{fig:casdim}
 \end{figure}
 
