--- a/report/main.tex
+++ b/report/main.tex
@@ -71,7 +71,7 @@
     #1%
     \\\hspace{\linewidth}%
     \textbf{Source:} #2%
-  }%
+}%
 }
 
 % header style
@@ -149,7 +149,7 @@
 \input{software_results.tex}
 
 \clearpage
-\section{Inertial Navigation System and Kalman Filter}
+\section{Inertial Navigation System and\\ Kalman Filter}
 \label{kf}
 \chapterauthor{Axelsson, Oskar (Theolin, Henrik)}
 \input{kf.tex}
@@ -166,4 +166,5 @@
 The project; complete with all software code, the application, hardware files and more, can be found online in our github-repo:\\
 \url{https://github.com/jsjolund/sailoraid}
 \end{center}
+
 \end{document}
