--- a/report/physics.tex
+++ b/report/physics.tex
@@ -17,7 +17,7 @@ and are represented in \autoref{points-sail}. A sailor wants to prevent the sail
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.5\textwidth]{Figures/max_lift.jpg}
-\caption{Sail angles of attack.}
+\captionsource{Sail angles of attack.}{\url{https://en.wikipedia.org/wiki/Forces_on_sails}}
 \label{max_liftl}
 \end{figure}
 \subsection{Velocity}
