Added captionsource to casing.tex

--- a/report/casing.tex
+++ b/report/casing.tex
@@ -16,7 +16,7 @@ This one had some problems, one of them was that the case was too big for any of
 \begin{figure}[H]
 \begin{center}
 	\includegraphics[width = .8\textwidth]{Figures/Case_rev_1.png}
-	\caption{First (1) revision of the case.}
+	\captionsource{First (1) revision of the case.}{Author}
 	\label{Case_rev_1}
 \end{center}
 \end{figure}
@@ -29,7 +29,7 @@ The next revision was like the first one, it had the same shape and idea as the 
 \begin{figure}[H]
 \begin{center}
 	\includegraphics[width = .8\textwidth]{Figures/Case_rev_2.png}
-	\caption{Second (2) revision of the case.}
+	\captionsource{Second (2) revision of the case.}{Author}
 	\label{Case_rev_2}
 \end{center}
 \end{figure}
@@ -47,7 +47,7 @@ When building the third version on the 3D-printer the problems with the model co
 \begin{figure}[H]
 \begin{center}
 	\includegraphics[width = .8\textwidth]{Figures/Case_rev_3.png}
-	\caption{Third (3) revision of the case.}
+	\captionsource{Third (3) revision of the case.}{Author}
 	\label{Case_rev_3}
 \end{center}
 \end{figure}
@@ -62,7 +62,7 @@ Due to the material cost and time it takes for the 3D printer to produce models 
 \begin{figure}[H]
 \begin{center}
 	\includegraphics[width = .8\textwidth]{Figures/Case_rev_4.png}
-	\caption{Fourth (4) and final version of the case.}
+	\captionsource{Fourth (4) and final version of the case.}{Author}
 	\label{Case_rev_4}
 \end{center}
 \end{figure}
